<resources>
    <string name="app_name">Citas medicas</string>
    <string name="login">login</string>
    <string name="labelLogin">Login</string>
    <string name="labelGuardar">Guardar</string>
    <string name="labelSubTitulo">Cita medica rapido y fácil</string>
    <string name="inputContrasena">Contraseña</string>
    <string name="inputConfirmarContrasena">Confirmar contraseña</string>
    <string name="inputCorreoElectronico">Correo electronico</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="label_crear_cuenta">Crear cuenta</string>
    <string name="title_activity_registro">RegistroActivit</string>
    <string name="labelRegistroUsuario">Registro usuarios</string>
    <string name="labelRegistroUsuarioSubTitulo">Completar formulario</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_menu_lateral">MenuLateralActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_citas">Mis citas</string>
    <string name="menu_salir">Salir</string>
</resources>