<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelLogin"
            android:textSize="60sp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="25dp"
            android:textColor="@color/colorAzulOscuro"
            android:fontFamily="@font/rubik_black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelSubTitulo"
            android:layout_marginTop="8dp"
            android:layout_marginStart="25dp"
            android:textColor="@color/colorAzulMedio"
            android:fontFamily="@font/rubik_medium"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/inputCorreoElectronico"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="25dp"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:importantForAutofill="no"
            android:textColor="@color/colorAzulOscuro"
            android:textColorHint="@color/colorAzulOscuro"
            android:backgroundTint="@color/colorAzulOscuro"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/inputContrasena"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="25dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:textColor="@color/colorAzulOscuro"
            android:textColorHint="@color/colorAzulOscuro"
            android:backgroundTint="@color/colorAzulOscuro"
            android:fontFamily="@font/rubik_regular"/>
        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorAzulClaro"
            android:shadowColor="@color/colorAzulOscuro"
            android:text="@string/btnIngresar"
            android:textColor="@color/white"
            android:fontFamily="@font/rubik_regular"
            />
        <TextView
            android:id="@+id/textCrearCuenta"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/label_crear_cuenta"
            android:textSize="20sp"
            android:textColor="@color/colorAzulMedio"
            android:fontFamily="@font/rubik_regular"
            android:textAlignment="center"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>